--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -4,15 +4,15 @@
 </div>
 
 <ion-tabs class="tabs-dark tabs-icon-top">
-    <ion-tab title="Leagues" icon="ion-home" href="#">
-        <ion-view></ion-view>
+    <ion-tab title="Leagues" icon="ion-home" href="#/home/leagues">
+        <ion-nav-view name="tab-leagues"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="My Footyboard" icon="ion-star" href="#">
-        <ion-view></ion-view>
+    <ion-tab title="My Footyboard" icon="ion-star" href="#/home/footyboard">
+        <ion-nav-view name="tab-footyboard"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Account" icon="ion-gear-b" href="#">
-        <ion-view></ion-view>
+    <ion-tab title="Teams" icon="ion-gear-b" href="#/home/myteams">
+        <ion-nav-view name="tab-myteams"></ion-nav-view>
     </ion-tab>
 </ion-tabs>
