set home page nav foort bar to use ui-sref paths

--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -4,15 +4,15 @@
 </div>
 
 <ion-tabs class="tabs-dark tabs-icon-top">
-    <ion-tab title="Leagues" icon="ion-home" href="#/home/leagues">
+    <ion-tab title="Leagues" icon="ion-home" ui-sref="home.leagues">
         <ion-nav-view name="tab-leagues"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="My Footyboard" icon="ion-star" href="#/home/footyboard">
+    <ion-tab title="My Footyboard" icon="ion-star" ui-sref="home.footyboard">
         <ion-nav-view name="tab-footyboard"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="Teams" icon="ion-gear-b" href="#/home/myteams">
+    <ion-tab title="Teams" icon="ion-gear-b" ui-sref="home.myteams">
         <ion-nav-view name="tab-myteams"></ion-nav-view>
     </ion-tab>
 </ion-tabs>
