team detail button hook to test state params

--- a/www/app/teams/team-detail.html
+++ b/www/app/teams/team-detail.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view ng-controller="teamDetailController">
 	<ion-content class="has-header">
 		<h1 class="title">Team Details</h1>
 	</ion-content>	
