--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,11 @@
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
+    <script src="app/teams/team-detail-controller.js"></script>
     <!--<script src="app/layout/menu-controller.js"></script>-->
   </head>
 
-  <body ng-app="footyNoNetApp">
+  <body ng-app="footyOnNetApp">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
