added league controller with fake data

--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,14 @@
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
+    
+    <!-- Services -->
+    <script src="app/services/footy-api.js"></script>
+
+    <!-- Controllers -->
     <script src="app/teams/team-detail-controller.js"></script>
-    <!--<script src="app/layout/menu-controller.js"></script>-->
+    <script src="app/home/leagues-controller.js"></script>
+
   </head>
 
   <body ng-app="footyOnNetApp">
