--- a/www/app/home/leagues.html
+++ b/www/app/home/leagues.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view ng-controller="LeaguesController as vm">
 	<ion-content class="has-header">
 		<h1 class="title">Leagues</h1>
 	</ion-content>	
