--- a/www/app/home/leagues.html
+++ b/www/app/home/leagues.html
@@ -1,8 +1,9 @@
 <ion-view ng-controller="LeaguesController as vm">
 	<ion-content class="has-header">
 		<div class="list">
-			<a class="item" ng-repeat="league in vm.leagues" >
+			<a class="item item-icon-right" ng-repeat="league in vm.leagues" >
 				{{league.name}}
+				<i class="icon ion-chevron-right icon-accessory"></i>
 			</a>
 		</div>
 	</ion-content>	
