--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <!-- Controllers -->
     <script src="app/teams/team-detail-controller.js"></script>
     <script src="app/home/leagues-controller.js"></script>
+    <script src="app/locations/locations-controller.js"></script>
 
   </head>
 
