added teams controller and teams listings with dividers

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
 
     <!-- Controllers -->
     <script src="app/teams/team-detail-controller.js"></script>
+    <script src="app/teams/teams-controller.js"></script>
     <script src="app/home/leagues-controller.js"></script>
     <script src="app/locations/locations-controller.js"></script>
 
