--- a/www/app/teams/teams.html
+++ b/www/app/teams/teams.html
@@ -1,7 +1,14 @@
-<ion-view>
+<ion-view ng-controller="TeamsController as vm">
 	<ion-content class="has-header">
-		<h1 class="title">Teams</h1>
+		<div class="list">
+			<div ng-repeat="division in vm.teams">
+				<div class="item item-divider">{{division.divisionName}}</div>
 
-		<a href="#/app/teams/21" class="button button-positive">Go to Team</a>
+				<a class="item item-icon-right" ng-repeat="team in division.divisionTeams" href="#app/teams/{{team.id}}">
+				{{team.name}}
+				<i class="icon ion-chevron-right icon-accessory"></i>
+				</a>
+			</div>
+		</div>		
 	</ion-content>	
 </ion-view>
