--- a/www/app/teams/teams.html
+++ b/www/app/teams/teams.html
@@ -2,7 +2,7 @@
 	<ion-content class="has-header">
 		<div class="list">
 			<div ng-repeat="division in vm.teams">
-				<div class="item item-divider">{{division.divisionName}}</div>
+				<div class="item item-divider item-dark">{{division.divisionName}}</div>
 
 				<a class="item item-icon-right" ng-repeat="team in division.divisionTeams" href="#app/teams/{{team.id}}">
 				{{team.name}}
