add standings controller and update standings view

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="app/teams/teams-controller.js"></script>
     <script src="app/home/leagues-controller.js"></script>
     <script src="app/locations/locations-controller.js"></script>
+    <script src="app/standings/standings-controller.js"></script>
 
   </head>
 
