--- a/www/app/standings/standings.html
+++ b/www/app/standings/standings.html
@@ -1,6 +1,16 @@
-
-<ion-view>
+<ion-view title="Standings" ng-controller="StandingsController as vm">
 	<ion-content class="has-header">
-		<h1 class="title">Standings</h1>
+		<div class="list">
+			<div ng-repeat="division in vm.standings">
+				<div class="item item-divider item-dark">
+					{{division.divisionName}}
+				</div>
+
+				<a href="#/app/teams/{{team.id}}" class="item item-icon-right" ng-repeat="team in division.divisionStandings">
+					{{team.teamName}} ({{team.wins}}-{{team.losses}})
+					<i class="icon ion-chevron-right icon-accessory"></i>
+				</a>	
+			</div>	
+		</div>
 	</ion-content>	
 </ion-view>
