--- a/www/app/teams/team-detail.html
+++ b/www/app/teams/team-detail.html
@@ -1,5 +1,11 @@
-<ion-view ng-controller="teamDetailController">
+<ion-view title="{{vm.teamName}}" ng-controller="TeamDetailController as vm">
 	<ion-content class="has-header">
-		<h1 class="title">Team Details</h1>
+		<div class="list">
+			<a class="item item-icon-right" ng-repeat="game in vm.games" ui-sref="app.game({ id: game.gameId })">
+				{{game.opponent}} {{game.scoreDisplay}}
+
+				<i class="icon ion-chevron-right icon-accessory"></i>
+			</a>
+		</div>
 	</ion-content>	
 </ion-view>
