--- a/www/app/teams/teams.html
+++ b/www/app/teams/teams.html
@@ -1,4 +1,4 @@
-<ion-view ng-controller="TeamsController as vm">
+<ion-view title="Teams" ng-controller="TeamsController as vm">
 	<ion-content class="has-header">
 		<div class="list">
 			<div ng-repeat="division in vm.teams">
