--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,10 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- extenal libs -->
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <script src="lib/lodash/dist/lodash.min.js"></script>
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
