added games controller and updated view

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="app/home/leagues-controller.js"></script>
     <script src="app/locations/locations-controller.js"></script>
     <script src="app/standings/standings-controller.js"></script>
+    <script src="app/game/game-controller.js"></script>
 
   </head>
 
