--- a/www/app/game/game.html
+++ b/www/app/game/game.html
@@ -1,5 +1,20 @@
-<ion-view>
+<ion-view title="Game" ng-controller="GameController as vm">
 	<ion-content class="has-header">
-		<h1 class="title">Game</h1>
+		
+		<div class="card">
+			<div class="item">
+				Home Team
+			</div>
+			<div class="item">
+				{{vm.game.team1}}
+			</div>
+			<div class="item">
+				{{vm.game.team1Score}}
+			</div>	
+		</div>
+
+		<div class="card"></div>
+		<div class="card"></div>
+
 	</ion-content>	
 </ion-view>
