--- a/www/app/game/game.html
+++ b/www/app/game/game.html
@@ -2,14 +2,15 @@
 	<ion-content class="has-header">
 		
 		<div class="card">
-			<div class="item">
+			<div class="item item-divider item-dark">
 				Home Team
 			</div>
-			<div class="item">
+			<a class="item item-text-wrap item-icon-right" ng-href="#/app/teams/{{vm.game.team1Id}}" >
 				{{vm.game.team1}}
-			</div>
-			<div class="item">
-				{{vm.game.team1Score}}
+				<i class="icon ion-chevron-right icon-accessory"></i>
+			</a>
+			<div class="item item-divider">
+				Score: {{vm.game.team1Score}}
 			</div>	
 		</div>
 
