--- a/www/app/game/game.html
+++ b/www/app/game/game.html
@@ -27,7 +27,17 @@
 			</div>	
 		</div>
 
-		<div class="card"></div>
+		<div class="card">
+			<div class="item item-divider item-dark">
+				Time/Location
+			</div>
+			<div class="item">
+				<span class="bold">Date Time:</span> {{vm.game.time | date:'M/d/yy'}} {{vm.game.time | date:'shortTime' }}
+			</div>
+			<div class="item item-button-right">
+				{{vm.game.location}}
+			</div>
+		</div>
 
 	</ion-content>	
 </ion-view>
