updated team detail with record card

--- a/www/app/teams/team-detail.html
+++ b/www/app/teams/team-detail.html
@@ -1,5 +1,11 @@
 <ion-view title="{{vm.teamName}}" ng-controller="TeamDetailController as vm">
 	<ion-content class="has-header">
+		<div class="card">
+			<div class="item item-balanced">
+				<h2>Record: {{vm.teamStanding.wins}} - {{vm.teamStanding.losses}}</h2>
+			</div>
+		</div>
+
 		<div class="list">
 			<a class="item item-icon-right" ng-repeat="game in vm.games" ui-sref="app.game({ id: game.gameId })">
 				
