--- a/www/app/teams/team-detail.html
+++ b/www/app/teams/team-detail.html
@@ -1,11 +1,47 @@
 <ion-view title="{{vm.teamName}}" ng-controller="TeamDetailController as vm">
 	<ion-content class="has-header">
+		
 		<div class="card">
+			<!--
 			<div class="item item-balanced">
 				<h2>Record: {{vm.teamStanding.wins}} - {{vm.teamStanding.losses}}</h2>
 			</div>
-		</div>
+			-->
+			
+			<div class="item item-button-right">
+				<h2>Record: {{vm.teamStanding.wins}} - {{vm.teamStanding.losses}}</h2>
 
+				<button class="button button-balanced" 
+						ng-click="vm.toggleFollow()"
+						ng-class="{'ion-checkmark-round': vm.following, 'ion-plus-round button-outline': !vm.following}">
+					{{vm.following ? "Following" : "Not Following"}}
+				</button>
+			</div>
+			
+			<!--
+			<div class="item item-checkbox">
+				<h2>{{vm.following ? "Following" : "Not Following"}}</h2>
+				<label class="checkbox">
+					<input type="checkbox" ng-model="vm.following"></label>
+				</label>
+			</div>
+			-->
+
+			<!--
+			<div class="item item-toggle">
+				<h2>{{vm.following ? "Following" : "Not Following"}}</h2>
+				<h2>Record: {{vm.teamStanding.wins}} - {{vm.teamStanding.losses}}</h2>
+				<label class="toggle toggle-balanced">
+					<input type="checkbox" ng-model="vm.following">
+					<div class="track">
+						<div class="handle"></div>
+					</div>
+					</label>
+				</label>
+			</div>
+			-->
+		</div>
+		
 		<div class="list">
 			<a class="item item-icon-right" ng-repeat="game in vm.games" ui-sref="app.game({ id: game.gameId })">
 				
