updated to use cache times, added myTeams controller, page, update following to user service

--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
     
     <!-- Services -->
     <script src="app/services/footy-api.js"></script>
-    
+    <script src="app/services/myteams-service.js"></script>
 
     <!-- Controllers -->
     <script src="app/teams/team-detail-controller.js"></script>
@@ -35,6 +35,7 @@
     <script src="app/locations/locations-controller.js"></script>
     <script src="app/standings/standings-controller.js"></script>
     <script src="app/game/game-controller.js"></script>
+    <script src="app/home/myteams-controller.js"></script>
 
   </head>
 
