--- a/www/app/teams/team-detail.html
+++ b/www/app/teams/team-detail.html
@@ -2,19 +2,13 @@
 	<ion-content class="has-header">
 		
 		<div class="card">
-			<!--
-			<div class="item item-balanced">
-				<h2>Record: {{vm.teamStanding.wins}} - {{vm.teamStanding.losses}}</h2>
-			</div>
-			-->
-			
 			<div class="item item-button-right">
-				<h2>Record: {{vm.teamStanding.wins}} - {{vm.teamStanding.losses}}</h2>
+				<h2>Record: {{ vm.teamStanding.wins }}-{{ vm.teamStanding.losses }}</h2>
 
-				<button class="button button-balanced" 
+				<button class="button button-balanced icon-left" 
 						ng-click="vm.toggleFollow()"
 						ng-class="{'ion-checkmark-round': vm.following, 'ion-plus-round button-outline': !vm.following}">
-					{{vm.following ? "Following" : "Not Following"}}
+					{{ vm.following ? "Following" : "Not Following" }}
 				</button>
 			</div>
 			
