added force refresh and pull down in teams view

--- a/www/app/teams/teams.html
+++ b/www/app/teams/teams.html
@@ -1,5 +1,8 @@
 <ion-view title="Teams" ng-controller="TeamsController as vm">
 	<ion-content class="has-header">
+
+		<ion-refresher class="dark" pulling-text="Pull to refresh..." on-refresh="vm.loadList(true)"></ion-refresher>	
+
 		<div class="list">
 			<div ng-repeat="division in vm.teams">
 				<div class="item item-divider item-dark">{{division.divisionName}}</div>
