updates to css and added markers

--- a/www/app/locations/location-map.html
+++ b/www/app/locations/location-map.html
@@ -4,6 +4,12 @@
 			draggable="true"
 			center="vm.map.center" 
 			zoom="vm.map.zoom">
+			<marker coords="vm.marker">
+				<marker-label content="vm.marker.title">
+
+				</marker-label>
+			</marker>
+
 		</ui-gmap-google-map> 
 	</ion-content>
 </ion-view>
