css updates, fixed bug with find method for lodash in location map controller

--- a/www/app/locations/location-map.html
+++ b/www/app/locations/location-map.html
@@ -5,9 +5,7 @@
 			center="vm.map.center" 
 			zoom="vm.map.zoom">
 			<marker coords="vm.marker">
-				<marker-label content="vm.marker.title">
-
-				</marker-label>
+				<marker-label content="vm.marker.title" anchor="10 -8" class="marker-labels"></marker-label>
 			</marker>
 
 		</ui-gmap-google-map> 
